# Displayer

./: .gitignore  .gitmodules  README.MD  config.py  main.py  pyproject.toml
models/: websocket.py
routes/: pages.py  websocket.py
service/: file_service.py
templates/: blank.html  display.html  display_journal.html  home.html  html_viewer.html  image_viewer.html  manager.html  viewer.html
