[tool.poetry]
name = "Displayer"
version = "0.1.0"
description = ""
authors = ["Théo Renard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
